# nesci

./: .gitignore  .gitlab-ci.py  .gitlab-ci.yml  CMakeLists.txt  CPPLINT.cfg  LICENSE  conanfile.py
cmake/: ConanHelpers.cmake  WarningLevels.cmake  conan.cmake  cppcheck.cmake  cpplint.cmake  get_target_include_directories.cmake  install_python_module_files.cmake  nesci-config.cmake  py.test.cmake  python_module.cmake  rwthvr.cmake  suppress_warnings.hpp.in
consumer/: CMakeLists.txt
consumer/include/nesci/consumer/: arbor_multimeter.hpp  consumer.hpp  device.hpp  multimeter.hpp  nest_multimeter.hpp  spike_detector.hpp
consumer/src/: arbor_multimeter.cpp  consumer.cpp  device.cpp  multimeter.cpp  nest_multimeter.cpp  spike_detector.cpp
consumer/tests/: CMakeLists.txt  test_arbor_multimeter.cpp  test_consumer.cpp  test_device.cpp  test_integration.cpp  test_multimeter.cpp  test_nest_multimeter.cpp  test_spike_detector.cpp  tests.cpp
consumer/tests/utilities/: cout_capture.hpp  vector_all_nan_or_empty.hpp
layout/: CMakeLists.txt
layout/include/nesci/layout/: device.hpp  layout.hpp  multimeter.hpp  spike_detector.hpp  utility.hpp
layout/src/: device.cpp  layout.cpp  multimeter.cpp  spike_detector.cpp  utility.cpp
layout/tests/: CMakeLists.txt  multimeter.cpp  test_device.cpp  test_layout.cpp  test_multimeter.cpp  test_spike_detector.cpp  tests.cpp
layout/tests/utilities/: cout_capture.hpp
producer/: CMakeLists.txt
producer/include/nesci/producer/: arbor_multimeter.hpp  device.hpp  nest_multimeter.hpp  producer.hpp  spike_detector.hpp
producer/include/producer/: arbor_multimeter.hpp  device.hpp  nest_multimeter.hpp
producer/src/: arbor_multimeter.cpp  device.cpp  nest_multimeter.cpp  producer.cpp  spike_detector.cpp
producer/tests/: CMakeLists.txt  test_arbor_multimeter.cpp  test_nest_multimeter.cpp  test_producer.cpp  test_spike_detector.cpp  tests.cpp
producer/tests/utilities/: cout_capture.hpp
pynesci/: CMakeLists.txt
pynesci/src/: CMakeLists.txt  __init__.py  pynesci.cpp  pynesci.hpp
pynesci/src/consumer/: CMakeLists.txt  __init__.py  arbor_multimeter.cpp  device.cpp  multimeter.cpp  nest_multimeter.cpp  pyconsumer.cpp  pyconsumer.hpp  spike_detector.cpp
pynesci/tests/: CMakeLists.txt  test_pynesci.py  test_pynesci_consumer_arbor_multimeter.py  test_pynesci_consumer_device.py  test_pynesci_consumer_multimeter.py  test_pynesci_consumer_nest_multimeter.py  test_pynesci_consumer_spike_detector.py
test_package/: CMakeLists.txt  conanfile.py  main.cpp
testing/: CMakeLists.txt
testing/include/nesci/testing/: conduit_schema.hpp  data.hpp
testing/src/: data.cpp
